[gd_scene load_steps=7 format=2]

[ext_resource path="res://objective/Concentrator.gd" type="Script" id=1]
[ext_resource path="res://common/DamageArea.tscn" type="PackedScene" id=2]

[sub_resource type="CylinderShape" id=1]
radius = 10.0
height = 5.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 1, 0, 1 )

[sub_resource type="CylinderMesh" id=3]
top_radius = 10.0
bottom_radius = 10.0
height = 0.1

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( 0, 0.05, 10, 0.980171, 0.05, 9.95185, 1.9509, 0.05, 9.80785, 2.90285, 0.05, 9.5694, 3.82683, 0.05, 9.2388, 4.71397, 0.05, 8.81921, 5.5557, 0.05, 8.3147, 6.34393, 0.05, 7.7301, 7.07107, 0.05, 7.07107, 7.7301, 0.05, 6.34393, 8.3147, 0.05, 5.5557, 8.81921, 0.05, 4.71397, 9.2388, 0.05, 3.82683, 9.5694, 0.05, 2.90285, 9.80785, 0.05, 1.9509, 9.95185, 0.05, 0.980171, 10, 0.05, 6.12303e-016, 9.95185, 0.05, -0.980171, 9.80785, 0.05, -1.9509, 9.5694, 0.05, -2.90285, 9.2388, 0.05, -3.82683, 8.81921, 0.05, -4.71397, 8.3147, 0.05, -5.5557, 7.7301, 0.05, -6.34393, 7.07107, 0.05, -7.07107, 6.34393, 0.05, -7.7301, 5.5557, 0.05, -8.3147, 4.71397, 0.05, -8.81921, 3.82683, 0.05, -9.2388, 2.90285, 0.05, -9.5694, 1.9509, 0.05, -9.80785, 0.980171, 0.05, -9.95185, 1.22461e-015, 0.05, -10, -0.980171, 0.05, -9.95185, -1.9509, 0.05, -9.80785, -2.90285, 0.05, -9.5694, -3.82683, 0.05, -9.2388, -4.71397, 0.05, -8.81921, -5.5557, 0.05, -8.3147, -6.34393, 0.05, -7.7301, -7.07107, 0.05, -7.07107, -7.7301, 0.05, -6.34393, -8.3147, 0.05, -5.5557, -8.81921, 0.05, -4.71397, -9.2388, 0.05, -3.82683, -9.5694, 0.05, -2.90285, -9.80785, 0.05, -1.9509, -9.95185, 0.05, -0.980171, -10, 0.05, -1.83691e-015, -9.95185, 0.05, 0.980171, -9.80785, 0.05, 1.9509, -9.5694, 0.05, 2.90285, -9.2388, 0.05, 3.82683, -8.81921, 0.05, 4.71397, -8.3147, 0.05, 5.5557, -7.7301, 0.05, 6.34393, -7.07107, 0.05, 7.07107, -6.34393, 0.05, 7.7301, -5.5557, 0.05, 8.3147, -4.71397, 0.05, 8.81921, -3.82683, 0.05, 9.2388, -2.90285, 0.05, 9.5694, -1.9509, 0.05, 9.80785, -0.980171, 0.05, 9.95185, -2.44921e-015, 0.05, 10, 0, 0.03, 10, 0.980171, 0.03, 9.95185, 1.9509, 0.03, 9.80785, 2.90285, 0.03, 9.5694, 3.82683, 0.03, 9.2388, 4.71397, 0.03, 8.81921, 5.5557, 0.03, 8.3147, 6.34393, 0.03, 7.7301, 7.07107, 0.03, 7.07107, 7.7301, 0.03, 6.34393, 8.3147, 0.03, 5.5557, 8.81921, 0.03, 4.71397, 9.2388, 0.03, 3.82683, 9.5694, 0.03, 2.90285, 9.80785, 0.03, 1.9509, 9.95185, 0.03, 0.980171, 10, 0.03, 6.12303e-016, 9.95185, 0.03, -0.980171, 9.80785, 0.03, -1.9509, 9.5694, 0.03, -2.90285, 9.2388, 0.03, -3.82683, 8.81921, 0.03, -4.71397, 8.3147, 0.03, -5.5557, 7.7301, 0.03, -6.34393, 7.07107, 0.03, -7.07107, 6.34393, 0.03, -7.7301, 5.5557, 0.03, -8.3147, 4.71397, 0.03, -8.81921, 3.82683, 0.03, -9.2388, 2.90285, 0.03, -9.5694, 1.9509, 0.03, -9.80785, 0.980171, 0.03, -9.95185, 1.22461e-015, 0.03, -10, -0.980171, 0.03, -9.95185, -1.9509, 0.03, -9.80785, -2.90285, 0.03, -9.5694, -3.82683, 0.03, -9.2388, -4.71397, 0.03, -8.81921, -5.5557, 0.03, -8.3147, -6.34393, 0.03, -7.7301, -7.07107, 0.03, -7.07107, -7.7301, 0.03, -6.34393, -8.3147, 0.03, -5.5557, -8.81921, 0.03, -4.71397, -9.2388, 0.03, -3.82683, -9.5694, 0.03, -2.90285, -9.80785, 0.03, -1.9509, -9.95185, 0.03, -0.980171, -10, 0.03, -1.83691e-015, -9.95185, 0.03, 0.980171, -9.80785, 0.03, 1.9509, -9.5694, 0.03, 2.90285, -9.2388, 0.03, 3.82683, -8.81921, 0.03, 4.71397, -8.3147, 0.03, 5.5557, -7.7301, 0.03, 6.34393, -7.07107, 0.03, 7.07107, -6.34393, 0.03, 7.7301, -5.5557, 0.03, 8.3147, -4.71397, 0.03, 8.81921, -3.82683, 0.03, 9.2388, -2.90285, 0.03, 9.5694, -1.9509, 0.03, 9.80785, -0.980171, 0.03, 9.95185, -2.44921e-015, 0.03, 10, 0, 0.01, 10, 0.980171, 0.01, 9.95185, 1.9509, 0.01, 9.80785, 2.90285, 0.01, 9.5694, 3.82683, 0.01, 9.2388, 4.71397, 0.01, 8.81921, 5.5557, 0.01, 8.3147, 6.34393, 0.01, 7.7301, 7.07107, 0.01, 7.07107, 7.7301, 0.01, 6.34393, 8.3147, 0.01, 5.5557, 8.81921, 0.01, 4.71397, 9.2388, 0.01, 3.82683, 9.5694, 0.01, 2.90285, 9.80785, 0.01, 1.9509, 9.95185, 0.01, 0.980171, 10, 0.01, 6.12303e-016, 9.95185, 0.01, -0.980171, 9.80785, 0.01, -1.9509, 9.5694, 0.01, -2.90285, 9.2388, 0.01, -3.82683, 8.81921, 0.01, -4.71397, 8.3147, 0.01, -5.5557, 7.7301, 0.01, -6.34393, 7.07107, 0.01, -7.07107, 6.34393, 0.01, -7.7301, 5.5557, 0.01, -8.3147, 4.71397, 0.01, -8.81921, 3.82683, 0.01, -9.2388, 2.90285, 0.01, -9.5694, 1.9509, 0.01, -9.80785, 0.980171, 0.01, -9.95185, 1.22461e-015, 0.01, -10, -0.980171, 0.01, -9.95185, -1.9509, 0.01, -9.80785, -2.90285, 0.01, -9.5694, -3.82683, 0.01, -9.2388, -4.71397, 0.01, -8.81921, -5.5557, 0.01, -8.3147, -6.34393, 0.01, -7.7301, -7.07107, 0.01, -7.07107, -7.7301, 0.01, -6.34393, -8.3147, 0.01, -5.5557, -8.81921, 0.01, -4.71397, -9.2388, 0.01, -3.82683, -9.5694, 0.01, -2.90285, -9.80785, 0.01, -1.9509, -9.95185, 0.01, -0.980171, -10, 0.01, -1.83691e-015, -9.95185, 0.01, 0.980171, -9.80785, 0.01, 1.9509, -9.5694, 0.01, 2.90285, -9.2388, 0.01, 3.82683, -8.81921, 0.01, 4.71397, -8.3147, 0.01, 5.5557, -7.7301, 0.01, 6.34393, -7.07107, 0.01, 7.07107, -6.34393, 0.01, 7.7301, -5.5557, 0.01, 8.3147, -4.71397, 0.01, 8.81921, -3.82683, 0.01, 9.2388, -2.90285, 0.01, 9.5694, -1.9509, 0.01, 9.80785, -0.980171, 0.01, 9.95185, -2.44921e-015, 0.01, 10, 0, -0.01, 10, 0.980171, -0.01, 9.95185, 1.9509, -0.01, 9.80785, 2.90285, -0.01, 9.5694, 3.82683, -0.01, 9.2388, 4.71397, -0.01, 8.81921, 5.5557, -0.01, 8.3147, 6.34393, -0.01, 7.7301, 7.07107, -0.01, 7.07107, 7.7301, -0.01, 6.34393, 8.3147, -0.01, 5.5557, 8.81921, -0.01, 4.71397, 9.2388, -0.01, 3.82683, 9.5694, -0.01, 2.90285, 9.80785, -0.01, 1.9509, 9.95185, -0.01, 0.980171, 10, -0.01, 6.12303e-016, 9.95185, -0.01, -0.980171, 9.80785, -0.01, -1.9509, 9.5694, -0.01, -2.90285, 9.2388, -0.01, -3.82683, 8.81921, -0.01, -4.71397, 8.3147, -0.01, -5.5557, 7.7301, -0.01, -6.34393, 7.07107, -0.01, -7.07107, 6.34393, -0.01, -7.7301, 5.5557, -0.01, -8.3147, 4.71397, -0.01, -8.81921, 3.82683, -0.01, -9.2388, 2.90285, -0.01, -9.5694, 1.9509, -0.01, -9.80785, 0.980171, -0.01, -9.95185, 1.22461e-015, -0.01, -10, -0.980171, -0.01, -9.95185, -1.9509, -0.01, -9.80785, -2.90285, -0.01, -9.5694, -3.82683, -0.01, -9.2388, -4.71397, -0.01, -8.81921, -5.5557, -0.01, -8.3147, -6.34393, -0.01, -7.7301, -7.07107, -0.01, -7.07107, -7.7301, -0.01, -6.34393, -8.3147, -0.01, -5.5557, -8.81921, -0.01, -4.71397, -9.2388, -0.01, -3.82683, -9.5694, -0.01, -2.90285, -9.80785, -0.01, -1.9509, -9.95185, -0.01, -0.980171, -10, -0.01, -1.83691e-015, -9.95185, -0.01, 0.980171, -9.80785, -0.01, 1.9509, -9.5694, -0.01, 2.90285, -9.2388, -0.01, 3.82683, -8.81921, -0.01, 4.71397, -8.3147, -0.01, 5.5557, -7.7301, -0.01, 6.34393, -7.07107, -0.01, 7.07107, -6.34393, -0.01, 7.7301, -5.5557, -0.01, 8.3147, -4.71397, -0.01, 8.81921, -3.82683, -0.01, 9.2388, -2.90285, -0.01, 9.5694, -1.9509, -0.01, 9.80785, -0.980171, -0.01, 9.95185, -2.44921e-015, -0.01, 10, 0, -0.03, 10, 0.980171, -0.03, 9.95185, 1.9509, -0.03, 9.80785, 2.90285, -0.03, 9.5694, 3.82683, -0.03, 9.2388, 4.71397, -0.03, 8.81921, 5.5557, -0.03, 8.3147, 6.34393, -0.03, 7.7301, 7.07107, -0.03, 7.07107, 7.7301, -0.03, 6.34393, 8.3147, -0.03, 5.5557, 8.81921, -0.03, 4.71397, 9.2388, -0.03, 3.82683, 9.5694, -0.03, 2.90285, 9.80785, -0.03, 1.9509, 9.95185, -0.03, 0.980171, 10, -0.03, 6.12303e-016, 9.95185, -0.03, -0.980171, 9.80785, -0.03, -1.9509, 9.5694, -0.03, -2.90285, 9.2388, -0.03, -3.82683, 8.81921, -0.03, -4.71397, 8.3147, -0.03, -5.5557, 7.7301, -0.03, -6.34393, 7.07107, -0.03, -7.07107, 6.34393, -0.03, -7.7301, 5.5557, -0.03, -8.3147, 4.71397, -0.03, -8.81921, 3.82683, -0.03, -9.2388, 2.90285, -0.03, -9.5694, 1.9509, -0.03, -9.80785, 0.980171, -0.03, -9.95185, 1.22461e-015, -0.03, -10, -0.980171, -0.03, -9.95185, -1.9509, -0.03, -9.80785, -2.90285, -0.03, -9.5694, -3.82683, -0.03, -9.2388, -4.71397, -0.03, -8.81921, -5.5557, -0.03, -8.3147, -6.34393, -0.03, -7.7301, -7.07107, -0.03, -7.07107, -7.7301, -0.03, -6.34393, -8.3147, -0.03, -5.5557, -8.81921, -0.03, -4.71397, -9.2388, -0.03, -3.82683, -9.5694, -0.03, -2.90285, -9.80785, -0.03, -1.9509, -9.95185, -0.03, -0.980171, -10, -0.03, -1.83691e-015, -9.95185, -0.03, 0.980171, -9.80785, -0.03, 1.9509, -9.5694, -0.03, 2.90285, -9.2388, -0.03, 3.82683, -8.81921, -0.03, 4.71397, -8.3147, -0.03, 5.5557, -7.7301, -0.03, 6.34393, -7.07107, -0.03, 7.07107, -6.34393, -0.03, 7.7301, -5.5557, -0.03, 8.3147, -4.71397, -0.03, 8.81921, -3.82683, -0.03, 9.2388, -2.90285, -0.03, 9.5694, -1.9509, -0.03, 9.80785, -0.980171, -0.03, 9.95185, -2.44921e-015, -0.03, 10, 0, -0.05, 10, 0.980171, -0.05, 9.95185, 1.9509, -0.05, 9.80785, 2.90285, -0.05, 9.5694, 3.82683, -0.05, 9.2388, 4.71397, -0.05, 8.81921, 5.5557, -0.05, 8.3147, 6.34393, -0.05, 7.7301, 7.07107, -0.05, 7.07107, 7.7301, -0.05, 6.34393, 8.3147, -0.05, 5.5557, 8.81921, -0.05, 4.71397, 9.2388, -0.05, 3.82683, 9.5694, -0.05, 2.90285, 9.80785, -0.05, 1.9509, 9.95185, -0.05, 0.980171, 10, -0.05, 6.12303e-016, 9.95185, -0.05, -0.980171, 9.80785, -0.05, -1.9509, 9.5694, -0.05, -2.90285, 9.2388, -0.05, -3.82683, 8.81921, -0.05, -4.71397, 8.3147, -0.05, -5.5557, 7.7301, -0.05, -6.34393, 7.07107, -0.05, -7.07107, 6.34393, -0.05, -7.7301, 5.5557, -0.05, -8.3147, 4.71397, -0.05, -8.81921, 3.82683, -0.05, -9.2388, 2.90285, -0.05, -9.5694, 1.9509, -0.05, -9.80785, 0.980171, -0.05, -9.95185, 1.22461e-015, -0.05, -10, -0.980171, -0.05, -9.95185, -1.9509, -0.05, -9.80785, -2.90285, -0.05, -9.5694, -3.82683, -0.05, -9.2388, -4.71397, -0.05, -8.81921, -5.5557, -0.05, -8.3147, -6.34393, -0.05, -7.7301, -7.07107, -0.05, -7.07107, -7.7301, -0.05, -6.34393, -8.3147, -0.05, -5.5557, -8.81921, -0.05, -4.71397, -9.2388, -0.05, -3.82683, -9.5694, -0.05, -2.90285, -9.80785, -0.05, -1.9509, -9.95185, -0.05, -0.980171, -10, -0.05, -1.83691e-015, -9.95185, -0.05, 0.980171, -9.80785, -0.05, 1.9509, -9.5694, -0.05, 2.90285, -9.2388, -0.05, 3.82683, -8.81921, -0.05, 4.71397, -8.3147, -0.05, 5.5557, -7.7301, -0.05, 6.34393, -7.07107, -0.05, 7.07107, -6.34393, -0.05, 7.7301, -5.5557, -0.05, 8.3147, -4.71397, -0.05, 8.81921, -3.82683, -0.05, 9.2388, -2.90285, -0.05, 9.5694, -1.9509, -0.05, 9.80785, -0.980171, -0.05, 9.95185, -2.44921e-015, -0.05, 10, 0, 0.05, 0, 0, 0.05, 10, 0.980171, 0.05, 9.95185, 1.9509, 0.05, 9.80785, 2.90285, 0.05, 9.5694, 3.82683, 0.05, 9.2388, 4.71397, 0.05, 8.81921, 5.5557, 0.05, 8.3147, 6.34393, 0.05, 7.7301, 7.07107, 0.05, 7.07107, 7.7301, 0.05, 6.34393, 8.3147, 0.05, 5.5557, 8.81921, 0.05, 4.71397, 9.2388, 0.05, 3.82683, 9.5694, 0.05, 2.90285, 9.80785, 0.05, 1.9509, 9.95185, 0.05, 0.980171, 10, 0.05, 6.12303e-016, 9.95185, 0.05, -0.980171, 9.80785, 0.05, -1.9509, 9.5694, 0.05, -2.90285, 9.2388, 0.05, -3.82683, 8.81921, 0.05, -4.71397, 8.3147, 0.05, -5.5557, 7.7301, 0.05, -6.34393, 7.07107, 0.05, -7.07107, 6.34393, 0.05, -7.7301, 5.5557, 0.05, -8.3147, 4.71397, 0.05, -8.81921, 3.82683, 0.05, -9.2388, 2.90285, 0.05, -9.5694, 1.9509, 0.05, -9.80785, 0.980171, 0.05, -9.95185, 1.22461e-015, 0.05, -10, -0.980171, 0.05, -9.95185, -1.9509, 0.05, -9.80785, -2.90285, 0.05, -9.5694, -3.82683, 0.05, -9.2388, -4.71397, 0.05, -8.81921, -5.5557, 0.05, -8.3147, -6.34393, 0.05, -7.7301, -7.07107, 0.05, -7.07107, -7.7301, 0.05, -6.34393, -8.3147, 0.05, -5.5557, -8.81921, 0.05, -4.71397, -9.2388, 0.05, -3.82683, -9.5694, 0.05, -2.90285, -9.80785, 0.05, -1.9509, -9.95185, 0.05, -0.980171, -10, 0.05, -1.83691e-015, -9.95185, 0.05, 0.980171, -9.80785, 0.05, 1.9509, -9.5694, 0.05, 2.90285, -9.2388, 0.05, 3.82683, -8.81921, 0.05, 4.71397, -8.3147, 0.05, 5.5557, -7.7301, 0.05, 6.34393, -7.07107, 0.05, 7.07107, -6.34393, 0.05, 7.7301, -5.5557, 0.05, 8.3147, -4.71397, 0.05, 8.81921, -3.82683, 0.05, 9.2388, -2.90285, 0.05, 9.5694, -1.9509, 0.05, 9.80785, -0.980171, 0.05, 9.95185, -2.44921e-015, 0.05, 10, 0, -0.05, 0, 0, -0.05, 10, 0.980171, -0.05, 9.95185, 1.9509, -0.05, 9.80785, 2.90285, -0.05, 9.5694, 3.82683, -0.05, 9.2388, 4.71397, -0.05, 8.81921, 5.5557, -0.05, 8.3147, 6.34393, -0.05, 7.7301, 7.07107, -0.05, 7.07107, 7.7301, -0.05, 6.34393, 8.3147, -0.05, 5.5557, 8.81921, -0.05, 4.71397, 9.2388, -0.05, 3.82683, 9.5694, -0.05, 2.90285, 9.80785, -0.05, 1.9509, 9.95185, -0.05, 0.980171, 10, -0.05, 6.12303e-016, 9.95185, -0.05, -0.980171, 9.80785, -0.05, -1.9509, 9.5694, -0.05, -2.90285, 9.2388, -0.05, -3.82683, 8.81921, -0.05, -4.71397, 8.3147, -0.05, -5.5557, 7.7301, -0.05, -6.34393, 7.07107, -0.05, -7.07107, 6.34393, -0.05, -7.7301, 5.5557, -0.05, -8.3147, 4.71397, -0.05, -8.81921, 3.82683, -0.05, -9.2388, 2.90285, -0.05, -9.5694, 1.9509, -0.05, -9.80785, 0.980171, -0.05, -9.95185, 1.22461e-015, -0.05, -10, -0.980171, -0.05, -9.95185, -1.9509, -0.05, -9.80785, -2.90285, -0.05, -9.5694, -3.82683, -0.05, -9.2388, -4.71397, -0.05, -8.81921, -5.5557, -0.05, -8.3147, -6.34393, -0.05, -7.7301, -7.07107, -0.05, -7.07107, -7.7301, -0.05, -6.34393, -8.3147, -0.05, -5.5557, -8.81921, -0.05, -4.71397, -9.2388, -0.05, -3.82683, -9.5694, -0.05, -2.90285, -9.80785, -0.05, -1.9509, -9.95185, -0.05, -0.980171, -10, -0.05, -1.83691e-015, -9.95185, -0.05, 0.980171, -9.80785, -0.05, 1.9509, -9.5694, -0.05, 2.90285, -9.2388, -0.05, 3.82683, -8.81921, -0.05, 4.71397, -8.3147, -0.05, 5.5557, -7.7301, -0.05, 6.34393, -7.07107, -0.05, 7.07107, -6.34393, -0.05, 7.7301, -5.5557, -0.05, 8.3147, -4.71397, -0.05, 8.81921, -3.82683, -0.05, 9.2388, -2.90285, -0.05, 9.5694, -1.9509, -0.05, 9.80785, -0.980171, -0.05, 9.95185, -2.44921e-015, -0.05, 10 )

[node name="Concentrator" type="Area"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
material_override = SubResource( 2 )
mesh = SubResource( 3 )
material/0 = null

[node name="DestructibleArea" parent="MeshInstance" instance=ExtResource( 2 )]

[node name="CollisionShape2" type="CollisionShape" parent="MeshInstance/DestructibleArea"]
shape = SubResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_Concentrator_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Concentrator_body_exited"]
[connection signal="die" from="MeshInstance/DestructibleArea" to="." method="_on_DestructibleArea_die"]
